--- a/about.html
+++ b/about.html
@@ -36,87 +36,77 @@ _comments:
 ---
 
 <div class="editable">
-
-  <h2>Statement</h2>
-  <p>Jeni Ross designs and makes contemporary woven tapestries, and also designs rugs and tufted wall hangings.   Working with yarns offers richness and depth of colour and allows her strong colourful designs to bring texture and content to both homes and public buildings.</p>
-
-  <p>Jeni&rsquo;s work can be seen across the UK, in hospitals, theatres, museums and government buildings.</p>
-
-  <p>Jeni is primarily concerned with colour and movement. Design influences come from many sources; fine art, performance, literature. Her designs use layers, contrasts and cycles; earth and air, night and day, negative and positive. These are interpreted using qualities of theatre; colour and illumination, the interplay of planes and textures.</p>
-
-  <p><strong>Major Projects </strong> include:</p>
-  <ul>
-    <li><strong>Current Project:</strong> Commission for Founders Library, New College, Oxford. 6 Woven tapestries.</li>
-    <li>Tapestry for Government Art Collection: House of Lords Offices.</li>
-    <li>3 related commissions for Norwich Castle Museum.</li>
-    <li>Woven tapestries for Strode Theatre Somerset &amp; Lyceum Theatre, Sheffield.</li>
-    <li>Tufted wall pieces for Belfast, Royal Oldham, Salford and Middlesbrough Hospitals.</li>
-    <li>2 Panel Tapestry and tufted wool carpet for Government Science laboratories.</li>
-  </ul>
-
-  <h2>Biography</h2>
-<h3>COMMISSIONS/COLLECTIONS include:</h3>
-<ul>
-    <li>2007 - 12 Commission for Founders Library, New College, Oxford. &quot;Dance to the Music of Time&quot; Suite of 6 Woven tapestries,  which were exhibited at the Ashmolean Museum in September/October 2012. The tapestries will be installed at New College in 2015.</li>
-
-    <li> &ldquo;BLUE&rdquo; Commissioned installation New Ashgate Gallery</li>
-    <li>Series of tufted textile artworks for Belfast HSS Trust Childrens&rsquo; Treatment Centres and Shannon Clinic, Belfast.</li>
-    <li> Tapestry for House of Lords Offices. Government Art Collection.</li>
-    <li> Tapestry, Carpet &amp; etched glass for Norwich Castle Museum.</li>
-    <li> Tufted Textile Wall Pieces for Salford Hospital, Manchester &amp; St Luke's Hospital South Tees NHS  Trust                        </li>
-    <li> Two Woven Tapestries for Strode Theatre, Street, Somerset.</li>
-    <li> Tufted Textile Wall Piece for Oldham NHS Trust. </li>
-    <li>3 Tapestries for Sheerness Public Library, Isle of Sheppey, Kent.                               </li>
-    <li> Tapestries and Carpet for Main Entrance, Central Science Laboratories, Ryedale, York for MAFF. Public Arts/RMJM London Ltd.</li>
-    <li> Tapestry, Mid-Kent Oncology Centre, Maidstone, Powell Moya</li>
-    <li>Tapestry for Lyceum Theatre,Sheffield; JG Graves Trust.</li>
-    <li>Set of 13 large woven tapestry cushions for Lambeth Palace Chapel, London.</li>
-</ul>
-
-<p>Crafts Council Directory selected member. </p>
-
-<h2>Links</h2>
-
-<h3>Links to Jeni's work:</h3>
- <ul>
-  <li><a href="http://www.craftscouncil.org.uk/directory/search/makers">http://www.craftscouncil.org.uk/directory/search/makers</a></li>
-  <li><a href="http://www.axisweb.org/seCVFU.aspx?ARTISTID=3792">Axis web </a></li>
-  <li><a href="http://americantapestryalliance.org/artist-pages/">americantapestryalliance.org/artist-pages/</a></li>
-  <li><cite class="_Rm"><a href="http://www.thebritishtapestrygroup.co.uk/">www.thebritishtapestrygroup.co.uk</a></cite><a href="http://www.thebritishtapestrygroup.co.uk/"> </a></li>
-  <li><a href="http://www.oxfordtoday.ox.ac.uk/culture/events/college-commissions">http://www.oxfordtoday.ox.ac.uk/culture/events/college-commissions</a></li>
-  <li><a href="http://connection.ebscohost.com/c/articles/26482452/jeni-ross-contradicting-tapestry-trends">connection.ebscohost.com/c/articles/26482452/jeni-ross-contradicting-tapestry-trends</a></li>
-  <li><a href="http://public-art.shu.ac.uk/sheffield/ross69.html">public-art.shu.ac.uk/sheffield/ross69.html</a></li>
-  <li><a href="http://www.bridgemanimages.com/">www.bridgemanimages.com/</a>   </li>
-  </ul>
-  <h3>General Links</h3>
-  <ul>
-
-  <li><a href="http://www.craftscouncil.org.uk/">www.craftscouncil.org.uk/</a><a href="http://www.axisweb.org/seCVFU.aspx?ARTISTID=3792"> </a></li>
-  <li><a href="http://www.axisweb.org/seCVFU.aspx?ARTISTID=3792">grainedit.com/</a></li>
-  <li><a href="http://www.gac.culture.gov.uk/picture_library/index.asp">www.gac.culture.gov.uk/picture_library/index.asp</a></li>
-  <li><a href="http://www.artmove.co.uk/">www.artmove.co.uk/</a></li>
-  <li><a href="http://www.britishcouncil.org/">www.britishcouncil.org/</a></li>
-  <li><a href="http://designmuseum.org/design/luis-barragan">designmuseum.org/design/luis-barragan</a></li>
-  <li><a href="http://www.galinsky.com/buildings/naoshima/index.htm">www.galinsky.com/buildings/naoshima/index.htm</a></li>
-  <li><a href="http://www.ocmevents.org/">www.ocmevents.org/</a></li>
-  <li><a href="http://www.commentart.com/">www.commentart.com/</a></li>
-  <li><a href="http://om-2012-acquisitions.blogspot.co.uk/">om-2012-acquisitions.blogspot.co.uk/</a></li>
-  <li><a href="http://www.facebook.com/IAmATapestryFan">www.facebook.com/IAmATapestryFan</a></li>
-  <li><a href="http://www.guardian.co.uk/artanddesign">www.guardian.co.uk/artanddesign</a></li>
-  <li><a href="http://www.designspotter.com/">www.designspotter.com/</a></li>
-  <li><a href="http://www.johannes-itten.com/">www.johannes-itten.com/</a></li>
-  <li><a href="http://bookshop.blackwell.co.uk/jsp/bsearch/-169272/ANT/Art_and_Craft">bookshop.blackwell.co.uk/jsp/bsearch/-169272/ANT/Art_and_Craft</a></li>
-  <li><a href="http://www.granta.com/">www.granta.com/</a></li>
-  <li><a href="http://www.artistsbooksonline.com/index.shtm">www.artistsbooksonline.com/index.shtm</a></li>
-  <li><a href="http://www.vam.ac.uk/page/a/artists-books/">www.vam.ac.uk/page/a/artists-books/</a></li>
-  <li><a href="http://www.gis.net/~scatt/sketchbook/links2.html#artists">www.gis.net/~scatt/sketchbook/links2.html#artists</a> </li>
-  <li><a href="http://www.thisiscolossal.com/">www.thisiscolossal.com/</a></li>
-  <li><a href="http://apod.nasa.gov/apod/">apod.nasa.gov/apod/</a></li>
-  <li><a href="http://www.vam.ac.uk/">www.vam.ac.uk/</a></li>
-  <li><a href="http://www.textilemuseum.org/">www.textilemuseum.org/</a></li>
-  <li><a href="http://www.jeniross.co.uk/www.nationalgallery.org.uk/">www.nationalgallery.org.uk/</a></li>
-  <li><a href="http://collagemuseum.com/index.html">collagemuseum.com/index.html</a></li>
-  <li><a href="http://www.csc.ucreative.ac.uk/">www.csc.ucreative.ac.uk/</a></li>
-  </ul>
-
-</div>
+    <h2>Statement</h2>
+    <p>Jeni Ross designs and makes contemporary woven tapestries, and also designs rugs and tufted wall hangings. Working with yarns offers richness and depth of colour and allows her strong colourful designs to bring texture and content to both homes and public buildings.</p>
+    <p>Jeni&rsquo;s work can be seen across the UK, in hospitals, theatres, museums and government buildings.</p>
+    <p>Jeni is primarily concerned with colour and movement. Design influences come from many sources; fine art, performance, literature. Her designs use layers, contrasts and cycles; earth and air, night and day, negative and positive. These are interpreted using qualities of theatre; colour and illumination, the interplay of planes and textures.</p>
+    <p><strong>Major Projects </strong> include:</p>
+    <ul>
+      <li>&nbsp;Commission for Founders Library, New College, Oxford. 6 Woven tapestries.</li>
+      <li>Tapestry for Government Art Collection: House of Lords Offices.</li>
+      <li>3 related commissions for Norwich Castle Museum.</li>
+      <li>Woven tapestries for Strode Theatre Somerset &amp; Lyceum Theatre, Sheffield.</li>
+      <li>Tufted wall pieces for Belfast, Royal Oldham, Salford and Middlesbrough Hospitals.</li>
+      <li>2 Panel Tapestry and tufted wool carpet for Government Science laboratories.</li>
+    </ul>
+    <h2>Biography</h2>
+    <h3>COMMISSIONS/COLLECTIONS include:</h3>
+    <p>&nbsp;</p>
+    <ul>
+      <li>&nbsp;Commission for Founders Library,&nbsp; New College, Oxford. "Dance to the Music of Time" Suite of 6 &nbsp; &nbsp; &nbsp;&nbsp; Woven tapestries, which were exhibited at the Ashmolean Museum in September/October 2012. The&nbsp; tapestries were installed at New College in 2015.</li>
+      <li>&ldquo;BLUE&rdquo; Commissioned installation New Ashgate Gallery</li>
+      <li>Series of tufted textile artworks for Belfast HSS Trust Childrens&rsquo; Treatment Centres and Shannon Clinic, Belfast.</li>
+      <li>Tapestry for House of Lords Offices. Government Art Collection.</li>
+      <li>Tapestry, Carpet &amp; etched glass for Norwich Castle Museum.</li>
+      <li>Tufted Textile Wall Pieces for Salford Hospital, Manchester &amp; St Luke's Hospital South Tees NHS Trust</li>
+      <li>Two Woven Tapestries for Strode Theatre, Street, Somerset.</li>
+      <li>Tufted Textile Wall Piece for Oldham NHS Trust.</li>
+      <li>3 Tapestries for Sheerness Public Library, Isle of Sheppey, Kent.</li>
+      <li>Tapestries and Carpet for Main Entrance, Central Science Laboratories, Ryedale, York for MAFF. Public Arts/RMJM London Ltd.</li>
+      <li>Tapestry, Mid-Kent Oncology Centre, Maidstone, Powell Moya</li>
+      <li>Tapestry for Lyceum Theatre,Sheffield; JG Graves Trust.</li>
+      <li>Set of 13 large woven tapestry cushions for Lambeth Palace Chapel, London.</li>
+    </ul>
+    <p>Crafts Council Directory selected member.</p>
+    <h2>Links</h2>
+    <h3>Links to Jeni's work:</h3>
+    <ul>
+      <li><a href="http://www.craftscouncil.org.uk/directory/search/makers">http://www.craftscouncil.org.uk/directory/search/makers</a></li>
+      <li><a href="http://www.axisweb.org/seCVFU.aspx?ARTISTID=3792">Axis web </a></li>
+      <li><a href="http://americantapestryalliance.org/artist-pages/">americantapestryalliance.org/artist-pages/</a></li>
+      <li><cite class="_Rm"><a href="http://www.thebritishtapestrygroup.co.uk/">www.thebritishtapestrygroup.co.uk</a></cite><a href="http://www.thebritishtapestrygroup.co.uk/"> </a></li>
+      <li><a href="http://www.oxfordtoday.ox.ac.uk/culture/events/college-commissions">http://www.oxfordtoday.ox.ac.uk/culture/events/college-commissions</a></li>
+      <li><a href="http://connection.ebscohost.com/c/articles/26482452/jeni-ross-contradicting-tapestry-trends">connection.ebscohost.com/c/articles/26482452/jeni-ross-contradicting-tapestry-trends</a></li>
+      <li><a href="http://public-art.shu.ac.uk/sheffield/ross69.html">public-art.shu.ac.uk/sheffield/ross69.html</a></li>
+      <li><a href="http://www.bridgemanimages.com/">www.bridgemanimages.com/</a></li>
+      <li><a href="http://www.craftscouncil.org.uk/">www.craftscouncil.org.uk/</a></li>
+    </ul>
+    <h3>General Links</h3>
+    <ul>
+      <li><a href="http://www.axisweb.org/seCVFU.aspx?ARTISTID=3792">grainedit.com/</a></li>
+      <li><a href="http://www.gac.culture.gov.uk/picture_library/index.asp">www.gac.culture.gov.uk/picture_library/index.asp</a></li>
+      <li><a href="http://www.artmove.co.uk/">www.artmove.co.uk/</a></li>
+      <li><a href="http://www.britishcouncil.org/">www.britishcouncil.org/</a></li>
+      <li><a href="http://designmuseum.org/design/luis-barragan">designmuseum.org/design/luis-barragan</a></li>
+      <li><a href="http://www.galinsky.com/buildings/naoshima/index.htm">www.galinsky.com/buildings/naoshima/index.htm</a></li>
+      <li><a href="http://www.ocmevents.org/">www.ocmevents.org/</a></li>
+      <li><a href="http://www.commentart.com/">www.commentart.com/</a></li>
+      <li><a href="http://om-2012-acquisitions.blogspot.co.uk/">om-2012-acquisitions.blogspot.co.uk/</a></li>
+      <li><a href="http://www.facebook.com/IAmATapestryFan">www.facebook.com/IAmATapestryFan</a></li>
+      <li><a href="http://www.guardian.co.uk/artanddesign">www.guardian.co.uk/artanddesign</a></li>
+      <li><a href="http://www.designspotter.com/">www.designspotter.com/</a></li>
+      <li><a href="http://www.johannes-itten.com/">www.johannes-itten.com/</a></li>
+      <li><a href="http://bookshop.blackwell.co.uk/jsp/bsearch/-169272/ANT/Art_and_Craft">bookshop.blackwell.co.uk/jsp/bsearch/-169272/ANT/Art_and_Craft</a></li>
+      <li><a href="http://www.granta.com/">www.granta.com/</a></li>
+      <li><a href="http://www.artistsbooksonline.com/index.shtm">www.artistsbooksonline.com/index.shtm</a></li>
+      <li><a href="http://www.vam.ac.uk/page/a/artists-books/">www.vam.ac.uk/page/a/artists-books/</a></li>
+      <li><a href="http://www.gis.net/~scatt/sketchbook/links2.html#artists">www.gis.net/~scatt/sketchbook/links2.html#artists</a></li>
+      <li><a href="http://www.thisiscolossal.com/">www.thisiscolossal.com/</a></li>
+      <li><a href="http://apod.nasa.gov/apod/">apod.nasa.gov/apod/</a></li>
+      <li><a href="http://www.vam.ac.uk/">www.vam.ac.uk/</a></li>
+      <li><a href="http://www.textilemuseum.org/">www.textilemuseum.org/</a></li>
+      <li><a href="http://www.jeniross.co.uk/www.nationalgallery.org.uk/">www.nationalgallery.org.uk/</a></li>
+      <li><a href="http://collagemuseum.com/index.html">collagemuseum.com/index.html</a></li>
+      <li><a href="http://www.csc.ucreative.ac.uk/">www.csc.ucreative.ac.uk/</a></li>
+    </ul>
+  </div>
