Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -6,25 +6,39 @@ main_image_path: /assets/images/505a04021f008.jpg
 main_image_caption: Jeni Ross in the studio
 frontpage: true
 homepage_description_markdown: >-
-  Jeni Ross designs and makes contemporary woven tapestries, and also designs rugs and tufted wall hangings.   Working with yarns offers richness and depth of colour and allows her strong colourful designs to bring texture and content to both homes and public buildings.
+  Jeni Ross designs and makes contemporary woven tapestries. She also paints and
+  has designed rugs and tufted wall hangings. Working with yarns offers richness
+  and depth of colour and allows her strong colourful designs to bring texture
+  and content to both homes and public buildings.
+
+
+  Jeni’s work can be seen across the UK, in hospitals, theatres, museums and
+  government buildings.
+
+
+  Jeni is primarily concerned with colour and movement. Influences come from
+  many sources; fine art, performance, literature. Her designs use layers,
+  contrasts and cycles; earth and air, night and day, negative and positive.
+  These are interpreted using qualities of theatre; colour and illumination, the
+  interplay of planes and textures.
 frontpagetitle: About
 images:
   - image_path:
-    image_title: ""
+    image_title:
     image_description:
 _options:
   layout:
     hidden: true
   main_image_path:
-    width: 1200
-    height: 1200
-    resize_style: "contain"
-    mime_type: "image/jpeg"
+    width: '1200'
+    height: '1200'
+    resize_style: contain
+    mime_type: image/jpeg
   image_path:
-    width: 1200
-    height: 1200
-    resize_style: "contain"
-    mime_type: "image/jpeg"
+    width: '1200'
+    height: '1200'
+    resize_style: contain
+    mime_type: image/jpeg
 _comments:
   title: Page title
   permalink: Be careful editing this
@@ -37,21 +51,12 @@ _comments:
 
 <div class="editable">
     <h2>Statement</h2>
-    <p>Jeni Ross designs and makes contemporary woven tapestries, and also designs rugs and tufted wall hangings. Working with yarns offers richness and depth of colour and allows her strong colourful designs to bring texture and content to both homes and public buildings.</p>
+    <p>Jeni Ross designs and makes contemporary woven tapestries. She also paints and has designed rugs and tufted wall hangings. Working with yarns offers richness and depth of colour and allows her strong colourful designs to bring texture and content to both homes and public buildings.</p>
     <p>Jeni&rsquo;s work can be seen across the UK, in hospitals, theatres, museums and government buildings.</p>
-    <p>Jeni is primarily concerned with colour and movement. Design influences come from many sources; fine art, performance, literature. Her designs use layers, contrasts and cycles; earth and air, night and day, negative and positive. These are interpreted using qualities of theatre; colour and illumination, the interplay of planes and textures.</p>
-    <p><strong>Major Projects </strong> include:</p>
-    <ul>
-      <li>&nbsp;Commission for Founders Library, New College, Oxford. 6 Woven tapestries.</li>
-      <li>Tapestry for Government Art Collection: House of Lords Offices.</li>
-      <li>3 related commissions for Norwich Castle Museum.</li>
-      <li>Woven tapestries for Strode Theatre Somerset &amp; Lyceum Theatre, Sheffield.</li>
-      <li>Tufted wall pieces for Belfast, Royal Oldham, Salford and Middlesbrough Hospitals.</li>
-      <li>2 Panel Tapestry and tufted wool carpet for Government Science laboratories.</li>
-    </ul>
+    <p>Jeni is primarily concerned with colour and movement. Influences come from many sources; fine art, performance, literature. Her designs use layers, contrasts and cycles; earth and air, night and day, negative and positive. These are interpreted using qualities of theatre; colour and illumination, the interplay of planes and textures.</p>
+    <ul></ul>
     <h2>Biography</h2>
     <h3>COMMISSIONS/COLLECTIONS include:</h3>
-    <p>&nbsp;</p>
     <ul>
       <li>&nbsp;Commission for Founders Library,&nbsp; New College, Oxford. "Dance to the Music of Time" Suite of 6 &nbsp; &nbsp; &nbsp;&nbsp; Woven tapestries, which were exhibited at the Ashmolean Museum in September/October 2012. The&nbsp; tapestries were installed at New College in 2015.</li>
       <li>&ldquo;BLUE&rdquo; Commissioned installation New Ashgate Gallery</li>
@@ -81,32 +86,6 @@ _comments:
       <li><a href="http://www.bridgemanimages.com/">www.bridgemanimages.com/</a></li>
       <li><a href="http://www.craftscouncil.org.uk/">www.craftscouncil.org.uk/</a></li>
     </ul>
-    <h3>General Links</h3>
-    <ul>
-      <li><a href="http://www.axisweb.org/seCVFU.aspx?ARTISTID=3792">grainedit.com/</a></li>
-      <li><a href="http://www.gac.culture.gov.uk/picture_library/index.asp">www.gac.culture.gov.uk/picture_library/index.asp</a></li>
-      <li><a href="http://www.artmove.co.uk/">www.artmove.co.uk/</a></li>
-      <li><a href="http://www.britishcouncil.org/">www.britishcouncil.org/</a></li>
-      <li><a href="http://designmuseum.org/design/luis-barragan">designmuseum.org/design/luis-barragan</a></li>
-      <li><a href="http://www.galinsky.com/buildings/naoshima/index.htm">www.galinsky.com/buildings/naoshima/index.htm</a></li>
-      <li><a href="http://www.ocmevents.org/">www.ocmevents.org/</a></li>
-      <li><a href="http://www.commentart.com/">www.commentart.com/</a></li>
-      <li><a href="http://om-2012-acquisitions.blogspot.co.uk/">om-2012-acquisitions.blogspot.co.uk/</a></li>
-      <li><a href="http://www.facebook.com/IAmATapestryFan">www.facebook.com/IAmATapestryFan</a></li>
-      <li><a href="http://www.guardian.co.uk/artanddesign">www.guardian.co.uk/artanddesign</a></li>
-      <li><a href="http://www.designspotter.com/">www.designspotter.com/</a></li>
-      <li><a href="http://www.johannes-itten.com/">www.johannes-itten.com/</a></li>
-      <li><a href="http://bookshop.blackwell.co.uk/jsp/bsearch/-169272/ANT/Art_and_Craft">bookshop.blackwell.co.uk/jsp/bsearch/-169272/ANT/Art_and_Craft</a></li>
-      <li><a href="http://www.granta.com/">www.granta.com/</a></li>
-      <li><a href="http://www.artistsbooksonline.com/index.shtm">www.artistsbooksonline.com/index.shtm</a></li>
-      <li><a href="http://www.vam.ac.uk/page/a/artists-books/">www.vam.ac.uk/page/a/artists-books/</a></li>
-      <li><a href="http://www.gis.net/~scatt/sketchbook/links2.html#artists">www.gis.net/~scatt/sketchbook/links2.html#artists</a></li>
-      <li><a href="http://www.thisiscolossal.com/">www.thisiscolossal.com/</a></li>
-      <li><a href="http://apod.nasa.gov/apod/">apod.nasa.gov/apod/</a></li>
-      <li><a href="http://www.vam.ac.uk/">www.vam.ac.uk/</a></li>
-      <li><a href="http://www.textilemuseum.org/">www.textilemuseum.org/</a></li>
-      <li><a href="http://www.jeniross.co.uk/www.nationalgallery.org.uk/">www.nationalgallery.org.uk/</a></li>
-      <li><a href="http://collagemuseum.com/index.html">collagemuseum.com/index.html</a></li>
-      <li><a href="http://www.csc.ucreative.ac.uk/">www.csc.ucreative.ac.uk/</a></li>
-    </ul>
+    <h3>&nbsp;</h3>
+    <ul></ul>
   </div>
