Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -23,6 +23,13 @@ homepage_description_markdown: >-
   interplay of planes and textures.
 frontpagetitle: About
 images:
+  - image_path: /uploads/img-2566.jpg
+    image_title: Detail of Woven Tapestry
+    image_description: >-
+      Woven Tapestry "None of this Transpired" 560 x 560 mm. Wool, linen and
+      silk on cotton warp.
+
+      Jeni Ross
   - image_path:
     image_title:
     image_description:
