Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@ _comments:
     <ul>
       <li>&nbsp;Commission for Founders Library,&nbsp; New College, Oxford. "Dance to the Music of Time" Suite of 6 &nbsp; &nbsp; &nbsp;&nbsp; Woven tapestries, which were exhibited at the Ashmolean Museum in September/October 2012. The&nbsp; tapestries were installed at New College in 2015.</li>
       <li>&ldquo;BLUE&rdquo; Commissioned installation New Ashgate Gallery</li>
-      <li>Series of tufted textile artworks for Belfast HSS Trust Childrens&rsquo; Treatment Centres and Shannon Clinic, Belfast.</li>
+      <li>Series of tufted textile artworks&nbsp; for Belfast HSS Trust Childrens&rsquo; Treatment Centres and Shannon Clinic, Belfast.</li>
       <li>Tapestry for House of Lords Offices. Government Art Collection.</li>
       <li>Tapestry, Carpet &amp; etched glass for Norwich Castle Museum.</li>
       <li>Tufted Textile Wall Pieces for Salford Hospital, Manchester &amp; St Luke's Hospital South Tees NHS Trust</li>
@@ -76,7 +76,7 @@ _comments:
       <li>3 Tapestries for Sheerness Public Library, Isle of Sheppey, Kent.</li>
       <li>Tapestries and Carpet for Main Entrance, Central Science Laboratories, Ryedale, York for MAFF. Public Arts/RMJM London Ltd.</li>
       <li>Tapestry, Mid-Kent Oncology Centre, Maidstone, Powell Moya</li>
-      <li>Tapestry for Lyceum Theatre,Sheffield; JG Graves Trust.</li>
+      <li>Tapestry for Lyceum Theatre, Sheffield; JG Graves Trust.</li>
       <li>Set of 13 large woven tapestry cushions for Lambeth Palace Chapel, London.</li>
     </ul>
     <p>Crafts Council Directory selected member.</p>
