Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@ _comments:
 
 <div class="editable">
     <h2>Statement</h2>
-    <p>Jeni Ross designs and makes contemporary woven tapestries. She also paints and has designed rugs and tufted wall hangings. Working with yarns offers richness and depth of colour and allows her strong colourful designs to bring texture and content to both homes and public buildings.</p>
+    <p>Jeni Ross designs and makes contemporary woven tapestries. She&nbsp; uses mixed media, paint and collages and has also designed rugs and tufted wall hangings. Working with yarns offers richness and depth of colour and allows her strong colourful designs to bring texture and content to both homes and public buildings.</p>
     <p>Jeni&rsquo;s work can be seen across the UK, in hospitals, theatres, museums and government buildings.</p>
     <p>Jeni is primarily concerned with colour and movement. Influences come from many sources; fine art, performance, literature. Her designs use layers, contrasts and cycles; earth and air, night and day, negative and positive. These are interpreted using qualities of theatre; colour and illumination, the interplay of planes and textures.</p>
     <ul></ul>
@@ -84,7 +84,6 @@ _comments:
     <h3>Links to Jeni's work:</h3>
     <ul>
       <li><a href="http://www.craftscouncil.org.uk/directory/search/makers">http://www.craftscouncil.org.uk/directory/search/makers</a></li>
-      <li><a href="http://www.axisweb.org/seCVFU.aspx?ARTISTID=3792">Axis web </a></li>
       <li><a href="http://americantapestryalliance.org/artist-pages/">americantapestryalliance.org/artist-pages/</a></li>
       <li><cite class="_Rm"><a href="http://www.thebritishtapestrygroup.co.uk/">www.thebritishtapestrygroup.co.uk</a></cite><a href="http://www.thebritishtapestrygroup.co.uk/"> </a></li>
       <li><a href="http://www.oxfordtoday.ox.ac.uk/culture/events/college-commissions">http://www.oxfordtoday.ox.ac.uk/culture/events/college-commissions</a></li>
