Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -6,10 +6,11 @@ main_image_path: /assets/images/505a04021f008.jpg
 main_image_caption: Jeni Ross in the studio
 frontpage: true
 homepage_description_markdown: >-
-  Jeni Ross designs and makes contemporary woven tapestries. She also paints and
-  has designed rugs and tufted wall hangings. Working with yarns offers richness
-  and depth of colour and allows her strong colourful designs to bring texture
-  and content to both homes and public buildings.
+  Jeni Ross designs and makes contemporary woven tapestries. She also uses mixed
+  media, paint and collages and has designed rugs and tufted wall hangings.
+  Working with yarns offers richness and depth of colour and allows her strong
+  colourful designs to bring texture and content to both homes and public
+  buildings.
 
 
   Jeni’s work can be seen across the UK, in hospitals, theatres, museums and
@@ -58,7 +59,7 @@ _comments:
 
 <div class="editable">
     <h2>Statement</h2>
-    <p>Jeni Ross designs and makes contemporary woven tapestries. She&nbsp; uses mixed media, paint and collages and has also designed rugs and tufted wall hangings. Working with yarns offers richness and depth of colour and allows her strong colourful designs to bring texture and content to both homes and public buildings.</p>
+    <p>Jeni Ross designs and makes contemporary woven tapestries. She also uses mixed media, paint and collages and has designed rugs and tufted wall hangings. Working with yarns offers richness and depth of colour and allows her strong colourful designs to bring texture and content to both homes and public buildings.</p>
     <p>Jeni&rsquo;s work can be seen across the UK, in hospitals, theatres, museums and government buildings.</p>
     <p>Jeni is primarily concerned with colour and movement. Influences come from many sources; fine art, performance, literature. Her designs use layers, contrasts and cycles; earth and air, night and day, negative and positive. These are interpreted using qualities of theatre; colour and illumination, the interplay of planes and textures.</p>
     <ul></ul>
