Crop all pages, remove news, update social links

--- a/about.html
+++ b/about.html
@@ -4,7 +4,9 @@ title: About
 permalink: /about/
 main_image_path: /assets/images/505a04021f008.jpg
 main_image_caption: Jeni Ross in the studio
-frontpage: true
+display_image: false
+images_first: true
+frontpage: false
 homepage_description_markdown: >-
   Jeni Ross designs and makes contemporary woven tapestries. She also uses mixed
   media, paint and collages and has designed rugs and tufted wall hangings.
@@ -23,13 +25,11 @@ homepage_description_markdown: >-
   These are interpreted using qualities of theatre; colour and illumination, the
   interplay of planes and textures.
 frontpagetitle: About
+thumb_crop: false
 images:
   - image_path: /uploads/img-2566.jpg
     image_title: Detail of Woven Tapestry
-    image_description:
-  - image_path:
-    image_title:
-    image_description:
+    image_description_markdown:
 _options:
   layout:
     hidden: true
@@ -47,10 +47,13 @@ _comments:
   title: Page title
   permalink: Be careful editing this
   main_image_path: Image used to represent your page
+  display_image: Show the featured image at the top of the page
+  images_first: display gallery of images BEFORE the main text
   frontpage: Show this page on the homepage
   homepage_description_markdown: Text used on homepage if shown
   frontpagetitle: Alternative title for home page use
   images: Add and edit images here
+  image_description_markdown: Might only be shown in the close up of an image
 ---
 
 <div class="editable">
