--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 main_image_path:
 main_image_caption:
 show_carousel: false
-show_blog: true
+show_blog: false
 posts_number: 2
 carousel:
   - image: /assets/images/advert-customers.jpg
