Update jekyll, sassc, and add new galleries

--- a/about.html
+++ b/about.html
@@ -2,33 +2,22 @@
 layout: page
 title: About
 permalink: /about/
+display_page_title: false
 main_image_path: /assets/images/505a04021f008.jpg
 main_image_caption: Jeni Ross in the studio
 display_image: false
 images_first: true
 frontpage: false
 homepage_description_markdown: >-
-  Jeni Ross designs and makes contemporary woven tapestries. She also uses mixed
-  media, paint and collages and has designed rugs and tufted wall hangings.
-  Working with yarns offers richness and depth of colour and allows her strong
-  colourful designs to bring texture and content to both homes and public
-  buildings.
-
-
-  Jeni’s work can be seen across the UK, in hospitals, theatres, museums and
-  government buildings.
-
-
-  Jeni is primarily concerned with colour and movement. Influences come from
-  many sources; fine art, performance, literature. Her designs use layers,
-  contrasts and cycles; earth and air, night and day, negative and positive.
-  These are interpreted using qualities of theatre; colour and illumination, the
-  interplay of planes and textures.
 frontpagetitle: About
+display_title: true
 thumb_crop: false
 images:
-  - image_path: /uploads/img-2566.jpg
+  - image_path: "/uploads/img-2566.jpg"
     image_title: Detail of Woven Tapestry
+    image_description_markdown:
+  - image_path: "/assets/images/505a04021f008.jpg"
+    image_title: In the studio
     image_description_markdown:
 _options:
   layout:
@@ -46,12 +35,14 @@ _options:
 _comments:
   title: Page title
   permalink: Be careful editing this
+  display_page_title: Show the page title at the top of the page
   main_image_path: Image used to represent your page
   display_image: Show the featured image at the top of the page
   images_first: display gallery of images BEFORE the main text
   frontpage: Show this page on the homepage
   homepage_description_markdown: Text used on homepage if shown
   frontpagetitle: Alternative title for home page use
+  display_title: Show image titles below images
   images: Add and edit images here
   image_description_markdown: Might only be shown in the close up of an image
 ---
