--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 layout: page
 title: Contact
 permalink: /contact/
+display_page_title: true
 main_image_path:
 main_image_caption:
 frontpage: false
