Updated 'gallery.html' via CloudCannon

--- a/gallery.html
+++ b/gallery.html
@@ -25,8 +25,8 @@ _comments:
 ---
 
 <div class="editable">
-  <p></p>
-</div>
+      <p>&nbsp;Jeni is&nbsp; primarily concerned with colour and movement and her designs involve layers, contrasts and cycles; earth and air, night and day, negative and positive. These are interpreted using qualities of theatre; colour and illumination, the interplay of planes and textures.&nbsp;</p>
+    </div>
 
 
 <section class="gallery--list">
@@ -51,4 +51,4 @@ _comments:
   {% endfor %}
 
 </section>
-</div>
+
