Updated 'gallery.html' via CloudCannon

--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,7 @@ _comments:
 ---
 
 <div class="editable">
-      <p>&nbsp;Jeni is&nbsp; primarily concerned with colour and movement and her designs involve layers, contrasts and cycles; earth and air, night and day, negative and positive. These are interpreted using qualities of theatre; colour and illumination, the interplay of planes and textures.&nbsp;</p>
+      <p>&nbsp;Jeni's&nbsp; work is primarily concerned with colour and movement and her designs involve layers, contrasts and cycles; earth and air, night and day, negative and positive. These are interpreted using qualities of theatre; colour and illumination, the interplay of planes and textures.&nbsp;</p>
     </div>
 
 
