Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -48,41 +48,41 @@ _comments:
 ---
 
 <div class="editable">
-    <h2>Statement</h2>
-    <p>Jeni Ross designs and makes contemporary woven tapestries. She also uses mixed media, paint and collages and has designed rugs and tufted wall hangings. Working with yarns offers richness and depth of colour and allows her strong colourful designs to bring texture and content to both homes and public buildings.</p>
-    <p>Jeni&rsquo;s work can be seen across the UK, in hospitals, theatres, museums and government buildings.</p>
-    <p>Jeni is primarily concerned with colour and movement. Influences come from many sources; fine art, performance, literature. Her designs use layers, contrasts and cycles; earth and air, night and day, negative and positive. These are interpreted using qualities of theatre; colour and illumination, the interplay of planes and textures.</p>
-    <ul></ul>
-    <h2>Biography</h2>
-    <h3>COMMISSIONS/COLLECTIONS include:</h3>
-    <ul>
-      <li>&nbsp;Commission for Founders Library,&nbsp; New College, Oxford. "Dance to the Music of Time" Suite of 6 &nbsp; &nbsp; &nbsp;&nbsp; Woven tapestries, which were exhibited at the Ashmolean Museum in September/October 2012. The&nbsp; tapestries were installed at New College in 2015.</li>
-      <li>&ldquo;BLUE&rdquo; Commissioned installation New Ashgate Gallery</li>
-      <li>Series of tufted textile artworks&nbsp; for Belfast HSS Trust Childrens&rsquo; Treatment Centres and Shannon Clinic, Belfast.</li>
-      <li>Tapestry for House of Lords Offices. Government Art Collection.</li>
-      <li>Tapestry, Carpet &amp; etched glass for Norwich Castle Museum.</li>
-      <li>Tufted Textile Wall Pieces for Salford Hospital, Manchester &amp; St Luke's Hospital South Tees NHS Trust</li>
-      <li>Two Woven Tapestries for Strode Theatre, Street, Somerset.</li>
-      <li>Tufted Textile Wall Piece for Oldham NHS Trust.</li>
-      <li>3 Tapestries for Sheerness Public Library, Isle of Sheppey, Kent.</li>
-      <li>Tapestries and Carpet for Main Entrance, Central Science Laboratories, Ryedale, York for MAFF. Public Arts/RMJM London Ltd.</li>
-      <li>Tapestry, Mid-Kent Oncology Centre, Maidstone, Powell Moya</li>
-      <li>Tapestry for Lyceum Theatre, Sheffield; JG Graves Trust.</li>
-      <li>Set of 13 large woven tapestry cushions for Lambeth Palace Chapel, London.</li>
-    </ul>
-    <p>Crafts Council Directory selected member.</p>
-    <h2>Links</h2>
-    <h3>Links to Jeni's work:</h3>
-    <ul>
-      <li><a href="http://www.craftscouncil.org.uk/directory/search/makers">http://www.craftscouncil.org.uk/directory/search/makers</a></li>
-      <li><a href="http://americantapestryalliance.org/artist-pages/">americantapestryalliance.org/artist-pages/</a></li>
-      <li><cite class="_Rm"><a href="http://www.thebritishtapestrygroup.co.uk/">www.thebritishtapestrygroup.co.uk</a></cite><a href="http://www.thebritishtapestrygroup.co.uk/"> </a></li>
-      <li><a href="http://www.oxfordtoday.ox.ac.uk/culture/events/college-commissions">http://www.oxfordtoday.ox.ac.uk/culture/events/college-commissions</a></li>
-      <li><a href="http://connection.ebscohost.com/c/articles/26482452/jeni-ross-contradicting-tapestry-trends">connection.ebscohost.com/c/articles/26482452/jeni-ross-contradicting-tapestry-trends</a></li>
-      <li><a href="http://public-art.shu.ac.uk/sheffield/ross69.html">public-art.shu.ac.uk/sheffield/ross69.html</a></li>
-      <li><a href="http://www.bridgemanimages.com/">www.bridgemanimages.com/</a></li>
-      <li><a href="http://www.craftscouncil.org.uk/">www.craftscouncil.org.uk/</a></li>
-    </ul>
-    <h3>&nbsp;</h3>
-    <ul></ul>
-  </div>
+      <h2>Statement</h2>
+      <p>Jeni Ross designs and makes contemporary woven tapestries. She also uses mixed media, paint and collages and has designed rugs and tufted wall hangings. Working with yarns offers richness and depth of colour and allows her strong colourful designs to bring texture and content to both homes and public buildings.</p>
+      <p>Jeni&rsquo;s work can be seen across the UK, in hospitals, theatres, museums and government buildings.</p>
+      <p>Jeni is primarily concerned with colour and movement. Influences come from many sources; fine art, performance, literature. Her designs use layers, contrasts and cycles; earth and air, night and day, negative and positive. These are interpreted using qualities of theatre; colour and illumination, the interplay of planes and textures.</p>
+      <ul></ul>
+      <h2>Biography</h2>
+      <h3>COMMISSIONS/COLLECTIONS include:</h3>
+      <ul>
+        <li>&nbsp;Commission for Founders Library,&nbsp; New College, Oxford. "Dance to the Music of Time" Suite of 6 &nbsp; &nbsp; &nbsp;&nbsp; woven tapestries,&nbsp; exhibited at the Ashmolean Museum and installed at New College in 2015.</li>
+        <li>&ldquo;BLUE&rdquo; Commissioned installation New Ashgate Gallery</li>
+        <li>Series of tufted textile artworks&nbsp; for Belfast HSS Trust Childrens&rsquo; Treatment Centres and Shannon Clinic, Belfast.</li>
+        <li>Work for House of Lords Offices. Government Art Collection.</li>
+        <li>Tapestry, Carpet &amp; etched glass for Norwich Castle Museum.</li>
+        <li>Tufted Textile Wall Pieces for Salford Hospital, Manchester &amp; St Luke's Hospital South Tees NHS Trust</li>
+        <li>Two Woven Tapestries for Strode Theatre, Street, Somerset.</li>
+        <li>Tufted Textile Wall Piece for Oldham NHS Trust.</li>
+        <li>3 Tapestries for Sheerness Public Library, Isle of Sheppey, Kent.</li>
+        <li>Tapestries and Carpet for Main Entrance, Central Science Laboratories, Ryedale, York for MAFF. Public Arts/RMJM London Ltd.</li>
+        <li>Tapestry, Mid-Kent Oncology Centre, Maidstone, Powell Moya Architects</li>
+        <li>Tapestry for Lyceum Theatre, Sheffield; JG Graves Trust.</li>
+        <li>Set of 13 large woven tapestry cushions for Lambeth Palace Chapel, London.</li>
+      </ul>
+      <p>Crafts Council Directory selected member.</p>
+      <h2>Links</h2>
+      <h3>Links to Jeni's work:</h3>
+      <ul>
+        <li><a href="http://www.craftscouncil.org.uk/directory/search/makers">http://www.craftscouncil.org.uk/directory/search/makers</a></li>
+        <li><a href="http://americantapestryalliance.org/artist-pages/">americantapestryalliance.org/artist-pages/</a></li>
+        <li><cite class="_Rm"><a href="http://www.thebritishtapestrygroup.co.uk/">www.thebritishtapestrygroup.co.uk</a></cite><a href="http://www.thebritishtapestrygroup.co.uk/"> </a></li>
+        <li><a href="http://www.oxfordtoday.ox.ac.uk/culture/events/college-commissions">http://www.oxfordtoday.ox.ac.uk/culture/events/college-commissions</a></li>
+        <li><a href="http://connection.ebscohost.com/c/articles/26482452/jeni-ross-contradicting-tapestry-trends">connection.ebscohost.com/c/articles/26482452/jeni-ross-contradicting-tapestry-trends</a></li>
+        <li><a href="http://public-art.shu.ac.uk/sheffield/ross69.html">public-art.shu.ac.uk/sheffield/ross69.html</a></li>
+        <li><a href="http://www.bridgemanimages.com/">www.bridgemanimages.com/</a></li>
+        <li><a href="http://www.craftscouncil.org.uk/">www.craftscouncil.org.uk/</a></li>
+      </ul>
+      <h3>&nbsp;</h3>
+      <ul></ul>
+    </div>
