Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@ _comments:
         <li>&nbsp;Commission for Founders Library,&nbsp; New College, Oxford. "Dance to the Music of Time" Suite of 6 &nbsp; &nbsp; &nbsp;&nbsp; woven tapestries,&nbsp; exhibited at the Ashmolean Museum and installed at New College in 2015.</li>
         <li>&ldquo;BLUE&rdquo; Commissioned installation New Ashgate Gallery</li>
         <li>Series of tufted textile artworks&nbsp; for Belfast HSS Trust Childrens&rsquo; Treatment Centres and Shannon Clinic, Belfast.</li>
-        <li>Work for House of Lords Offices. Government Art Collection.</li>
+        <li>Tapestry and Collage-Cutout for House of Lords Offices. Government Art Collection.</li>
         <li>Tapestry, Carpet &amp; etched glass for Norwich Castle Museum.</li>
         <li>Tufted Textile Wall Pieces for Salford Hospital, Manchester &amp; St Luke's Hospital South Tees NHS Trust</li>
         <li>Two Woven Tapestries for Strode Theatre, Street, Somerset.</li>
