Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@ _comments:
 
 <div class="editable">
       <h2>Statement</h2>
-      <p>Jeni Ross designs and makes contemporary woven tapestries. She also uses mixed media, paint and collages and has designed rugs and tufted wall hangings. Working with yarns offers richness and depth of colour and allows her strong colourful designs to bring texture and content to both homes and public buildings.</p>
+      <p>Jeni Ross designs and makes contemporary handwoven tapestries. She also uses mixed media, paint and collages and has designed rugs and tufted wall hangings. Working with yarns offers richness and depth of colour and allows her strong colourful designs to bring texture and content to both homes and public buildings.</p>
       <p>Jeni&rsquo;s work can be seen across the UK, in hospitals, theatres, museums and government buildings.</p>
       <p>Jeni is primarily concerned with colour and movement. Influences come from many sources; fine art, performance, literature. Her designs use layers, contrasts and cycles; earth and air, night and day, negative and positive. These are interpreted using qualities of theatre; colour and illumination, the interplay of planes and textures.</p>
       <ul></ul>
@@ -59,15 +59,15 @@ _comments:
         <li>&nbsp;Commission for Founders Library,&nbsp; New College, Oxford. "Dance to the Music of Time" Suite of 6 &nbsp; &nbsp; &nbsp;&nbsp; woven tapestries,&nbsp; exhibited at the Ashmolean Museum and installed at New College in 2015.</li>
         <li>&ldquo;BLUE&rdquo; Commissioned installation New Ashgate Gallery</li>
         <li>Series of tufted textile artworks&nbsp; for Belfast HSS Trust Childrens&rsquo; Treatment Centres and Shannon Clinic, Belfast.</li>
-        <li>Tapestry and Collage-Cutout for House of Lords Offices. Government Art Collection.</li>
-        <li>Tapestry, Carpet &amp; etched glass for Norwich Castle Museum.</li>
+        <li>Woven Tapestry and Collage-Cutout for House of Lords Offices. Government Art Collection.</li>
+        <li>Woven Tapestry, Carpet &amp; etched glass for Norwich Castle Museum.</li>
         <li>Tufted Textile Wall Pieces for Salford Hospital, Manchester &amp; St Luke's Hospital South Tees NHS Trust</li>
         <li>Two Woven Tapestries for Strode Theatre, Street, Somerset.</li>
         <li>Tufted Textile Wall Piece for Oldham NHS Trust.</li>
-        <li>3 Tapestries for Sheerness Public Library, Isle of Sheppey, Kent.</li>
-        <li>Tapestries and Carpet for Main Entrance, Central Science Laboratories, Ryedale, York for MAFF. Public Arts/RMJM London Ltd.</li>
-        <li>Tapestry, Mid-Kent Oncology Centre, Maidstone, Powell Moya Architects</li>
-        <li>Tapestry for Lyceum Theatre, Sheffield; JG Graves Trust.</li>
+        <li>3 Woven Tapestries for Sheerness Public Library, Isle of Sheppey, Kent.</li>
+        <li>2 Woven Tapestries and Carpet for Main Entrance, Central Science Laboratories, Ryedale, York for MAFF. Public Arts/RMJM London Ltd.</li>
+        <li>Woven Tapestry, Mid-Kent Oncology Centre, Maidstone, Powell Moya Architects</li>
+        <li>Woven Tapestry for Lyceum Theatre, Sheffield; JG Graves Trust.</li>
         <li>Set of 13 large woven tapestry cushions for Lambeth Palace Chapel, London.</li>
       </ul>
       <p>Crafts Council Directory selected member.</p>
