Updated 'contact.html' via CloudCannon

--- a/contact.html
+++ b/contact.html
@@ -33,17 +33,13 @@ _comments:
   frontpagetitle: Alternative title for home page use
 ---
 
-  <div class="editable">
-
-  <p>If you have any  questions, would like more information about work for sale or are  considering commission a unique tapestry, rug or hand gun-tufted wall hanging please do contact Jeni for a conversation with no obligation.</p>
-
-<p>Telephone: 01252 401156</p>
-
-<p>Jeni Ross is based in Farnham, Surrey. UK.</p>
-
-<h4>Send an email</h4>
-  <p>Please email Jeni using: jeni.ross@virgin.net or use the form below</p>
-  </div>
+<div class="editable">
+        <p>If you have any questions, would like more information about work for sale or are considering commission a unique tapestry&nbsp; please do contact Jeni for a conversation with no obligation.</p>
+        <p>Telephone: 01252 401156</p>
+        <p>Jeni Ross is based in Farnham, Surrey. UK.</p>
+        <h4>Send an email</h4>
+        <p>Please email Jeni using: jeni.ross@virgin.net or use the form below</p>
+      </div>
 
 {% if page.show_form %}
     <h4>Send an email</h4>
@@ -51,15 +47,15 @@ _comments:
 
     <fieldset>
       <input type="text" name="_gotcha" style="display:none" />
-      <input type="hidden" name="_to" value="support@eyedivision.com">
-      <input type="hidden" name="_subject" value="Web form">
+      <input type="hidden" name="_to" value="support@eyedivision.com" />
+      <input type="hidden" name="_subject" value="Web form" />
       <p>
       <label for="name">Name:</label>
-      <input type="text" name="name">
+      <input type="text" name="name" />
       </p>
       <p>
       <label for="_replyto">Email:</label>
-      <input type="email" name="_replyto">
+      <input type="email" name="_replyto" />
       </p>
       <p>
       <label>Message</label>
@@ -70,7 +66,7 @@ _comments:
       {% endif %}
 
       <p>
-        <input type="submit" value="Send message">
+        <input type="submit" value="Send message" />
       </p>
 
     </fieldset>
