--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@ _comments:
 ---
 
 <div class="editable">
-      <p>If you have any questions, would like more information about work for sale or are considering commissioning a unique tapestry&nbsp; please do contact Jeni for a conversation with no obligation.</p>
+      <p>If you have any questions, would like more information about work for sale or are considering commissioning a tapestry&nbsp; please do contact Jeni for a conversation with no obligation.</p>
       <p>Telephone: 01252 401156</p>
       <p>Jeni Ross is based in Farnham, Surrey. UK.</p>
       <h4>Send an email</h4>
