Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@ _comments:
 ---
 
 <div class="editable">
-          <p>This is the demo editable first paragraph. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, in magnam placeat. Ex illo ipsa libero voluptatem necessitatibus modi fugit odit omnis. Sequi voluptatem mollitia voluptatum ipsum placeat, quaerat laudantium!</p>
-
-        </div>
+      <p>Jeni Ross designs and makes contemporary handwoven tapestries. Working with yarns offers richness and depth of colour and allows her strong colourful designs to bring texture and content to both homes and public buildings. Her work can be seen across the UK, in hospitals, theatres, museums and government buildings.</p>
+    </div>
 
      {% if page.show_carousel and page.carousel %}
     <section class="slideshow">
@@ -148,4 +147,4 @@ _comments:
       <p><a href="/news/">Read all news&nbsp;&raquo;</a></p>
 
     </section>
-    {% endif %}
+    {% endif %}</section>
