Updated 'contact.html' via CloudCannon

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@ _comments:
       <p>Telephone: 01252 401156</p>
       <p>Jeni Ross is based in Farnham, Surrey. UK.</p>
       <h4>Send an email</h4>
-      <p>Please email Jeni using: jeni.ross@virgin.net or use the form below</p>
+      <p>Please email Jeni using: jenirosstaps@icloud.com,&nbsp; jeni.ross@virgin.net or use the form below</p>
     </div>
 
 {% if page.show_form %}
