Updated 36 files via CloudCannon

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@ _comments:
       <h2>Biography</h2>
       <h3>COMMISSIONS/COLLECTIONS include:</h3>
       <ul>
-        <li>&nbsp;Commission for Founders Library,&nbsp; New College, Oxford. "Dance to the Music of Time" Suite of 6 &nbsp; &nbsp; &nbsp;&nbsp; woven tapestries,&nbsp; exhibited at the Ashmolean Museum and installed at New College in 2015.</li>
+        <li>&nbsp;Commission for Founders Library,&nbsp; New College, Oxford. "Dance to the Music of Time" Suite of 6 &nbsp; &nbsp; &nbsp;&nbsp; woven tapestries,&nbsp; exhibited at the Ashmolean Museum and installed in The Founder's Library, 2015</li>
         <li>&ldquo;BLUE&rdquo; Commissioned installation New Ashgate Gallery</li>
         <li>Series of tufted textile artworks&nbsp; for Belfast HSS Trust Childrens&rsquo; Treatment Centres and Shannon Clinic, Belfast.</li>
         <li>Woven Tapestry and Collage-Cutout for House of Lords Offices. UK Government Art Collection.</li>
