Updated 'contact.html' via CloudCannon

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,8 @@ _comments:
 
     <fieldset>
       <input type="text" name="_gotcha" style="display:none" />
-      <input type="hidden" name="_to" value="support@eyedivision.com" />
+      <input type="hidden" name="_to" value="jenirosstaps@icloud.com" />
+      <input type="hidden" name="_cc" value="support@eyedivision.com" />
       <input type="hidden" name="_subject" value="Web form" />
       <p>
       <label for="name">Name:</label>
